feat: add send mail router and swagger
